--- a/style2.css
+++ b/style2.css
@@ -124,19 +124,21 @@
     max-width: 1200px; 
 }
 
-.bookappt_img {
-  width:60%;
-  margin-top: 50px;
+
+
+/* office policies section */ 
+
+.buttonappt {
+  margin-top: 20px;
 }
-
-#bookapptImgs {
-  text-align:center;
-}
-
-
-/* credit cards for the office policies section */ 
 .cardImg {
-  margin-bottom:10px;
+  margin-bottom:12px;
+}
+.btnimg{
+  max-width: 300px; 
+  margin-left: auto; 
+  margin-right: auto; 
+  display:block;
 }
 
 /* Patient Edu accordion list section */
@@ -317,15 +319,13 @@ td {
   padding-left: 30px;
   padding-right: 30px;
   }
-  
-.bookappt_img {
-  width:60%;
-  margin-top: 30px;
-}
 
-#bookapptImgs {
-  text-align:right;
-}
+  #buttons{
+    margin-top:40px;
+  }
+
+  
+
 
 
   /*locations section desktop*/
@@ -376,9 +376,7 @@ td {
     padding-left: 30px;
     padding-right: 30px;
   }
-  #bookapptImgs {
-    text-align:center;
-  }
+
 
   /*  patient edu accord section mobile */
   #accordEdu {
